--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
                             <div class="line"></div>
                         </div>
 
+                        <div class="menu-panel">
+                            <!-- <span class="closeBtn">&times;</span> -->
+                            <img class="close" src="images/close.svg" alt="" />
+                            <ul>
+                                <li><a href="#">home</a></li>
+                                <li><a href="#">my works</a></li>
+                                <li><a href="#">my clients</a></li>
+                                <li><a href="#">contact me</a></li>
+                            </ul>
+                        </div>
+
                         <div class="menu-list">
                             <ul>
                                 <li><a href="#">home</a></li>
@@ -227,5 +238,6 @@
                 <p>© 2024 , Jane Doe</p>
             </footer>
         </div>
+        <script src="app.js"></script>
     </body>
 </html>
