--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
 
                     <div class="frame">
-                        <img src="images/1.webp" alt="My works" />
+                        <img id="frame" src="images/1.webp" alt="My works" />
                     </div>
 
                     <div class="gallery">
