--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
                         </div>
 
                         <div class="gallery-item">
-                            <img src="images/1.webp" alt="">
+                            <img src="images/2.webp" alt="">
                         </div> 
 
                         <div class="gallery-item">
-                            <img src="images/1.webp" alt="">
+                            <img src="images/3.jpeg" alt="">
                         </div>
 
                         <div class="gallery-item">
-                            <img src="images/1.webp" alt="">
+                            <img src="images/4.jpeg" alt="">
                         </div>
 
                         <div class="gallery-item">
-                            <img src="images/1.webp" alt="">
+                            <img src="images/5.webp" alt="">
                         </div> 
 
                         <div class="gallery-item">
